#+OPTIONS: ^:nil
#+STARTUP: showeverything

* v0.3
* v0.2
  - Coverage RTL is now written to foo_coverage.sv rather than foo_coverage.v
  - SystemVerilog coverage is now based on ACOV_SV rather than ACOV_SVA
  - The input language has gained an "in" keyword. See README.md for details
  - There is now documentation in README.md
* v0.1
  - Initial release