@@ -1,5 +1,3 @@
-{-# LANGUAGE DeriveGeneric #-}
-
 module SymbolTable
   ( Symbol
   , SymbolTable
@@ -24,10 +22,9 @@ import qualified Data.Map.Strict as Map
 import Data.Array.IArray
 import qualified Data.Foldable as Foldable
 import Data.Functor
-import Data.Hashable
 import Data.Traversable
-import GHC.Generics (Generic)
 
+import Hashable
 import CList
 import ErrorsOr
 import Ranged
@@ -35,9 +32,10 @@ import Ranged
 import qualified Parser as P
 
 newtype Symbol = Symbol Int
-  deriving (Eq, Ord, Generic)
+  deriving (Eq, Ord)
 
-instance Hashable Symbol
+instance Hashable Symbol where
+  hash (Symbol n) = hash n
 
 mapGet :: String -> LCRange -> P.Symbol -> Map.Map String Int -> ErrorsOr Int
 mapGet what rng psym map =
@@ -54,9 +52,8 @@ data SymbolTable a =
               }
 
 instance Hashable a => Hashable (SymbolTable a)
-  where hashWithSalt n st =
-          hashWithSalt n (Map.toAscList $ stMap st,
-                          elems $ stData st)
+  where hash st = hash (Map.toAscList $ stMap st,
+                         elems $ stData st)
 
 instance Functor SymbolTable where
   fmap f st = SymbolTable (stMap st) (f' <$> (stData st))
