@@ -1,7 +1,9 @@
 #+OPTIONS: ^:nil
 #+STARTUP: showeverything
 
-* v0.3
+* NEXT
+  - The generated hash values should no longer depend on the library versions
+    against which ACov was built.
 * v0.2
   - Coverage RTL is now written to foo_coverage.sv rather than foo_coverage.v
   - SystemVerilog coverage is now based on ACOV_SV rather than ACOV_SVA
